--- a/connection.html
+++ b/connection.html
@@ -109,12 +109,35 @@
 					Connection to authorities and other resources
 					</h2>
 					<div>
-						<p class="animate-box">CONNECTION TO AUTHORITIES AND OTHER RESOURCES</P>  
-					
+						<p class="animate-box">We created URIs for 3 different entities and we described each of them in RDF/XML, one of the possibile serializations of RDF:
+							<ul class="animate-box">
+								<li>PEOPLE - Napoleon: <mark style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Napoleon</mark></li>
+							</br>
+							<img src="images/connectionnapoleon.jpg" alt="" class="animate-box img-responsive">
+							</br>
+							<p class="animate-box" data-animate-effect="fadeInLeft"><i class="far fa-arrow-alt-circle-right"></i> <span>View the online-version of the <a href="xml/napoleon.xml" target="_blank">RDF/XML</a> of this entity here.</span></p>
+							</br>
+							</br>
+								<li>PLACE - Rochefort: <mark style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Rochefort</mark></li>
+							</br>
+							<img src="images/connectionplace.jpg" alt="" class="animate-box img-responsive">
+							</br>
+							<p class="animate-box" data-animate-effect="fadeInLeft"><i class="far fa-arrow-alt-circle-right"></i> <span>View the online-version of the <a href="xml/rochefort.xml" target="_blank">RDF/XML</a> of this entity here.</span></p>
+							</br>
+							</br>
+								<li>CONCEPT/SUBJECT: <mark style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Napoleon_surrender</mark></li>
+							</br>
+							<img src="images/connectionconcept.jpg" alt="" class="animate-box img-responsive">
+							</br>
+							<p class="animate-box" data-animate-effect="fadeInLeft"><i class="far fa-arrow-alt-circle-right"></i> <span>View the online-version of the <a href="xml/surrender.xml" target="_blank">RDF/XML</a> of this entity here.</span></p>
+							</br>
+							</br>
+							</ul>
+
 					<nav aria-label="...">
 						<ul class="pager">
 							<li class="previous"><a href="rdf.html"><span aria-hidden="true">&larr;</span> RDF</a></li>
-    					</ul>
+  						</ul>
 					</nav>
 				</div>
 			</div>
