--- a/connection.html
+++ b/connection.html
@@ -113,21 +113,21 @@
 							<ul class="animate-box">
 								<li>PEOPLE - Napoleon: <mark style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Napoleon</mark></li>
 							</br>
-							<img src="images/connectionnapoleon.jpg" alt="" class="animate-box img-responsive">
+							<img src="images/connectionnapoleon.png" alt="" class="animate-box img-responsive">
 							</br>
 							<p class="animate-box" data-animate-effect="fadeInLeft"><i class="far fa-arrow-alt-circle-right"></i> <span>View the online-version of the <a href="xml/napoleon.xml" target="_blank">RDF/XML</a> of this entity here.</span></p>
 							</br>
 							</br>
 								<li>PLACE - Rochefort: <mark style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Rochefort</mark></li>
 							</br>
-							<img src="images/connectionplace.jpg" alt="" class="animate-box img-responsive">
+							<img src="images/connectionplace.png" alt="" class="animate-box img-responsive">
 							</br>
 							<p class="animate-box" data-animate-effect="fadeInLeft"><i class="far fa-arrow-alt-circle-right"></i> <span>View the online-version of the <a href="xml/rochefort.xml" target="_blank">RDF/XML</a> of this entity here.</span></p>
 							</br>
 							</br>
 								<li>CONCEPT/SUBJECT: <mark style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Napoleon_surrender</mark></li>
 							</br>
-							<img src="images/connectionconcept.jpg" alt="" class="animate-box img-responsive">
+							<img src="images/connectionconcept.png" alt="" class="animate-box img-responsive">
 							</br>
 							<p class="animate-box" data-animate-effect="fadeInLeft"><i class="far fa-arrow-alt-circle-right"></i> <span>View the online-version of the <a href="xml/surrender.xml" target="_blank">RDF/XML</a> of this entity here.</span></p>
 							</br>
