Added the alignment and standard section

--- a/report/index.html
+++ b/report/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" prefix="schema: http://schema.org/ prism: http://prismstandard.org/namespaces/basic/2.0/"><head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   
 
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/rash.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/rash.css" />
   <!-- Local MathJax -->
   <!-- <script src="js/MathJax/MathJax.js"></script> -->
 
@@ -25,7 +25,7 @@
   
   
   
-<meta about="mailto:martina.dellobuono@studio.unibo.it" typeof="schema:Person" property="schema:name" name="dc.creator" content="Martina Dello Buono"><meta about="mailto:martina.dellobuono@studio.unibo.it" property="schema:email" content="martina.dellobuono@studio.unibo.it"><link about="mailto:martina.dellobuono@studio.unibo.it" property="schema:affiliation" href="#affiliation_1"><meta about="mailto:fabio.mariani6@studio.unibo.it" typeof="schema:Person" property="schema:name" name="dc.creator" content="Fabio Mariani"><meta about="mailto:fabio.mariani6@studio.unibo.it" property="schema:email" content="fabio.mariani6@studio.unibo.it"><link about="mailto:fabio.mariani6@studio.unibo.it" property="schema:affiliation" href="#affiliation_1"><meta about="mailto:gianmarco.spinaci@studio.unibo.it" typeof="schema:Person" property="schema:name" name="dc.creator" content="Gianmarco Spinaci"><meta about="mailto:gianmarco.spinaci@studio.unibo.it" property="schema:email" content="gianmarco.spinaci@studio.unibo.it"><link about="mailto:gianmarco.spinaci@studio.unibo.it" property="schema:affiliation" href="#affiliation_1"><meta about="#affiliation_1" typeof="schema:Organization" property="schema:name" content="Digital Humanities and Digital Knowledge"><meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0,minimum-scale=1.0,maximum-scale=1.0"></head>
+<meta about="mailto:martina.dellobuono@studio.unibo.it" typeof="schema:Person" property="schema:name" name="dc.creator" content="Martina Dello Buono" /><meta about="mailto:martina.dellobuono@studio.unibo.it" property="schema:email" content="martina.dellobuono@studio.unibo.it" /><link about="mailto:martina.dellobuono@studio.unibo.it" property="schema:affiliation" href="#affiliation_1" /><meta about="mailto:fabio.mariani6@studio.unibo.it" typeof="schema:Person" property="schema:name" name="dc.creator" content="Fabio Mariani" /><meta about="mailto:fabio.mariani6@studio.unibo.it" property="schema:email" content="fabio.mariani6@studio.unibo.it" /><link about="mailto:fabio.mariani6@studio.unibo.it" property="schema:affiliation" href="#affiliation_1" /><meta about="mailto:gianmarco.spinaci@studio.unibo.it" typeof="schema:Person" property="schema:name" name="dc.creator" content="Gianmarco Spinaci" /><meta about="mailto:gianmarco.spinaci@studio.unibo.it" property="schema:email" content="gianmarco.spinaci@studio.unibo.it" /><link about="mailto:gianmarco.spinaci@studio.unibo.it" property="schema:affiliation" href="#affiliation_1" /><meta about="#affiliation_1" typeof="schema:Organization" property="schema:name" content="Digital Humanities and Digital Knowledge" /><meta property="prism:keyword" content="Linked Open Data" /><meta property="prism:keyword" content="Cultural Heritage" /><meta property="prism:keyword" content="RDF" /><meta property="prism:keyword" content="Napoleone Bonaparte" /><meta property="prism:keyword" content="Digital Humanities" /><meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0,minimum-scale=1.0,maximum-scale=1.0" /></head>
 
 <body>
 <section id="section1">
@@ -35,7 +35,7 @@
 <section id="section2">
 <h1>E-R diagram</h1>
 <figure id="img_1">
-<p><img src="img/er.jpg" alt="img/er.jpg"></p>
+<p><img src="img/er.jpg" alt="img/er.jpg" /></p>
 <figcaption>The E-R diagram of our idea.</figcaption>
 </figure>
 </section>
@@ -48,36 +48,40 @@
 </li>
 <li><strong>Letter of surrender from Napoleon to the Prince Regent, 13 July 1815</strong>, Text [<a href="https://www.royalcollection.org.uk/collection/452438-d/letter-of-surrender-from-napoleon-to-the-prince-regent-13-july-1815" rel="noopener">Royal Collection Trust</a>]</li>
 <li>
-<p><strong>The Emperor Napoleon in His Study at the Tuileries</strong>, Painting [<a href="https://artsandculture.google.com/asset/the-emperor-napoleon-in-his-study-at-the-tuileries/zQEbF0AA9NhCXQ" rel="noopener">Google Arts & Culture</a> / <a href="https://www.nga.gov/collection/art-object-page.46114.html#overview" rel="noopener">National Gallery of Art</a>]</p>
+<p><strong>The Emperor Napoleon in His Study at the Tuileries</strong>, Painting [<a href="https://artsandculture.google.com/asset/the-emperor-napoleon-in-his-study-at-the-tuileries/zQEbF0AA9NhCXQ" rel="noopener">Google Arts &amp; Culture</a> / <a href="https://www.nga.gov/collection/art-object-page.46114.html#overview" rel="noopener">National Gallery of Art</a>]</p>
 </li>
 <li>
 <p><strong>Plan de la bataille de Waterloo ou mont St-Jean. 18 juin 1815</strong>, Artifact [<a href="http://gallica.bnf.fr/ark:/12148/btv1b84396742.r=waterloo?rk=64378;0" rel="noopener">Gallica</a>]</p>
 </li>
 <li>
-<p><strong>The Field of Waterloo</strong>, Painting [<a href="https://artsandculture.google.com/asset/the-field-of-waterloo/SAHHtXw-QBrM9g" rel="noopener">Google Arts & Culture</a> / <a href="http://www.britishmuseum.org/research/collection_online/collection_object_details.aspx?objectId=684398&partId=1&museumno=1872,0608.198&page=1" rel="noopener">British Museum</a>]</p>
+<p><strong>The Field of Waterloo</strong>, Painting [<a href="https://artsandculture.google.com/asset/the-field-of-waterloo/SAHHtXw-QBrM9g" rel="noopener">Google Arts &amp; Culture</a> / <a href="http://www.britishmuseum.org/research/collection_online/collection_object_details.aspx?objectId=684398&amp;partId=1&amp;museumno=1872,0608.198&amp;page=1" rel="noopener">British Museum</a>]</p>
 </li>
 <li>
 <p><strong>Cuirasse de carabinier Fauveau</strong>, Artifact [<a href="http://www.musee-armee.fr/collections/base-de-donnees-des-collections/objet/cuirasse-du-carabinier-fauveau.html" rel="noopener">Musée de l'Armée</a>]</p>
 </li>
 <li>
-<p><strong>Carte di Pasotti Francesco</strong>, Collection of texts [<a href="http://san.beniculturali.it/web/san/dettaglio-complesso-documentario?codiSanCompl=san.cat.complArch.88660&step=dettaglio&id=88660" rel="noopener">Archivio storico di Imola</a>]</p>
+<p><strong>Carte di Pasotti Francesco</strong>, Collection of texts [<a href="http://san.beniculturali.it/web/san/dettaglio-complesso-documentario?codiSanCompl=san.cat.complArch.88660&amp;step=dettaglio&amp;id=88660" rel="noopener">Archivio storico di Imola</a>]</p>
 </li>
 <li>
-<p><strong>Europe after the Congress of Vienna</strong>, Artifact [<a href="https://catalog.loc.gov/vwebv/search?searchCode=LCCN&searchArg=map54000811&searchType=1&permalink=y" rel="noopener">Library of Congress</a>]</p>
+<p><strong>Europe after the Congress of Vienna</strong>, Artifact [<a href="https://catalog.loc.gov/vwebv/search?searchCode=LCCN&amp;searchArg=map54000811&amp;searchType=1&amp;permalink=y" rel="noopener">Library of Congress</a>]</p>
 </li>
 <li>
-<p><strong>Tagebuch vom Wiener</strong> <strong>Kongreß</strong>, Text [<a href="https://portal.dnb.de/opac.htm?method=showFullRecord&currentResultId=%22Carl%22+and+%22Bertuch%22%26any&currentPosition=0" rel="noopener">DEUTSCHEN NATIONALBIBLIOTHEK</a>]</p>
+<p><strong>Tagebuch vom Wiener</strong> <strong>Kongreß</strong>, Text [<a href="https://portal.dnb.de/opac.htm?method=showFullRecord&amp;currentResultId=%22Carl%22+and+%22Bertuch%22%26any&amp;currentPosition=0" rel="noopener">DEUTSCHEN NATIONALBIBLIOTHEK</a>]</p>
 </li>
 <li>
-<p><strong>The 28th Regiment at Quatre Bras</strong>, Painting [<a href="https://artsandculture.google.com/asset/the-28th-regiment-at-quatre-bras/GgFy6v2a0UOmWQ" rel="noopener">Google Arts & Culture</a> / <a href="https://www.ngv.vic.gov.au/explore/collection/work/4408/" rel="noopener">National Gallery of Victoria</a>]</p>
+<p><strong>The 28th Regiment at Quatre Bras</strong>, Painting [<a href="https://artsandculture.google.com/asset/the-28th-regiment-at-quatre-bras/GgFy6v2a0UOmWQ" rel="noopener">Google Arts &amp; Culture</a> / <a href="https://www.ngv.vic.gov.au/explore/collection/work/4408/" rel="noopener">National Gallery of Victoria</a>]</p>
 </li>
 </ol>
 </section>
 <section id="section4">
-<h1>The standards</h1>
+<h1>The standard and alignment</h1>
 </section>
 <section id="section5">
-<h1>Alignment</h1>
+<p>The alignment below is between different metadata standard related to people, places, dates and concepts, used by cultural heritage institutions.</p>
+<figure id="img_4">
+<p><img src="img/alignement.png" alt="img/alignement.png" /></p>
+<figcaption>Alignment of the metadata used to describe the found items.</figcaption>
+</figure>
 </section>
 <section id="section6">
 <h1>Theoretical model</h1>
@@ -100,7 +104,8 @@
 <section id="section18">
 <h1>What (subject/concept)</h1>
 <p>Of course, our model has to describe the subject/concept proper of an item. Our mission, here, is to describe the item and the concept expressed by the item itself. We raised some questions on this matter, starting from "<em>What is the name of the current object?</em>", "<em>What is the language is which it is described?</em>", "<em>What type of object is this?</em>" or "<em>What is the content/concept that is represented by means of this object?</em>".</p>
-<p>Some of these questions are general and fully handled with the <a href="http://dublincore.org/documents/dces/" rel="noopener">Dublin Core Metadata Initiative</a>. This standard is the most used because: it is the most functional, its properties are very general and it grants a very high level of abstraction. If we have to describe concepts, and we are unable to do it using Dublin Core (eg: the event associated to an item, because<strong> EDM can be both event or object centric</strong>) we have preferred the <a href="https://pro.europeana.eu/page/edm-documentation" rel="noopener">Europeana Data Model</a> i.e. the standard proposed by Europeana itself. EDM, in turn, uses DC to extend its properties, because some of the EDM properties are sub-properties of the DC ones. </p>
+<p>Some of these questions are general and fully handled with the <a href="http://dublincore.org/documents/dces/" rel="noopener">Dublin Core Metadata Initiative</a>. This standard is the most used because: it is the most functional, its properties are very general and it grants a very high level of abstraction.</p>
+<p>TODO CIDOC-CRM</p>
 </section>
 </section>
 <section id="section7">
@@ -113,7 +118,7 @@
 xmlns:dc="http://dublincore.org/2012/06/14/dcelements"
 xmlns:dcterms="http://purl.org/dc/terms/"</code></pre>
 <figure id="img_2">
-<p><img src="img/who(final).png" alt="img/who(final).png"></p>
+<p><img src="img/who(final).png" alt="img/who(final).png" /></p>
 <figcaption>This image is the description of the conceptual model we defined for answering the questions. For each of them, we describe which property better describe it.</figcaption>
 </figure>
 <p>In the following list, the meaning of each property is described:</p>
@@ -139,7 +144,7 @@ xmlns:wgs84_pos="http://www.w3.org/2003/01/geo/wgs84_pos#"​</code></pre>
 <figure id="table_1">
 <table>
 
-<tbody><tr>
+<tr>
 <th>Question</th>
 <th>Property</th>
 </tr>
@@ -184,7 +189,7 @@ xmlns:wgs84_pos="http://www.w3.org/2003/01/geo/wgs84_pos#"​</code></pre>
 </td>
 </tr>
 
-</tbody></table>
+</table>
 <figcaption>Table of questions and answers. The answers are the properties of the used vocabularies.</figcaption>
 </figure>
 </section>
@@ -197,36 +202,32 @@ xmlns:crm="http://www.cidoc-crm.org/cidoc-crm/"
 xmlns:dc="http://purl.org/dc/elements/1.1/" 
 xmlns:foaf="http://xmlns.com/foaf/0.1/"</code><code></code></pre>
 <figure id="img_3">
-<p><img src="img/what(final).png" alt="img/what(final).png"></p>
+<p><img src="img/what(final).png" alt="img/what(final).png" /></p>
 <figcaption>How our conceptual model aims to describe the subject/concept.</figcaption>
 </figure>
 </section>
 </section>
 <section id="section20">
 <h1>Describe items using our model</h1>
-<p>In this section we are going to describe some items, using natural language, using our model.</p>
+<p>In this section we are going to describe some items, using natural language, using our model. We have created a shared folder in <strong>Google Drive</strong> containing all the needed files <a href="https://drive.google.com/open?id=1YXpVIixVn0IR1Wn89T91GYNGBDvbuhsR" rel="noopener">here</a>.</p>
 <section id="section22">
 <section id="section23"></section>
 </section>
 </section>
 <section id="section24">
 <h1>Describe an entity using RDF</h1>
-<p>In this section, </p>
-<figure id="img_4">
-<p><img src="img/napoleon.png" alt="img/napoleon.png"></p>
-<figcaption>RDF/XML serialization of Napoleone Bonaparte, using the EAC-CPF archivial standard.</figcaption>
-</figure>
+<p>We created URIs for 3 different entities and we described each of them in RDF/XML, one of the possibile serializations of RDF: </p>
+<ol>
+<li>
+<p>PERSON: <strong>Napoleone Bonaparte</strong> (<a href="https://waterlod.github.io/xml/napoleon.xml" rel="noopener">RDF/XML</a>), described with <strong>EAC-CPF</strong>;</p>
+</li>
+<li>PLACE: <strong>Rochefort</strong> (<a href="https://waterlod.github.io/xml/rochefort.xml" rel="noopener">RDF/XML</a>), described with <strong>GeoNames</strong>;</li>
+<li>CONCEPT/SUBJECT: <strong>Surrender of Napoleon</strong> (<a href="https://waterlod.github.io/xml/surrender.xml" rel="noopener">RDF/XML</a>), described with <strong>CIDOC-CRM</strong> and <strong>DC</strong>.</li>
+</ol>
 </section>
-<section id="section21">
-<figure id="img_5">
-<p><img src="img/rochefort.png" alt="img/rochefort.png"></p>
-<figcaption>RDF/XML Serialization of Rochefort, using GeoNames.</figcaption>
-</figure>
-<p>The following RDF/XML description is more complex: it describes the concept of surrender, directly related to the physical thing i.e. letter.</p>
-<figure id="img_6">
-<p><img src="img/surrender.png" alt="img/surrender.png"></p>
-<figcaption>RDF/XML Serialization of the concept <strong>surrender</strong> described in the letter.</figcaption>
-</figure>
+<section id="section25">
+<h1>Connecting data to other related items</h1>
+<p>TODO</p>
 </section>
 <section id="doc-bibliography" role="doc-bibliography">
 <h1>References</h1>
