Correction in about

--- a/about.html
+++ b/about.html
@@ -208,7 +208,7 @@
 								<img src="images/link.jpg">
 							</div>
 							<div class="fh5co-text">
-								<h3><strong><a href="" alt="">Connection to authorities <span>and other resources</span></a></strong></h3>
+								<h3><strong><a href="connection.html" alt="">Connection to authorities <span>and other resources</span></a></strong></h3>
 								<p>Connection of the data to the same authorities for people, places and subjects, and to other resources using semantic associations</p>
 							</div>
 						</div>
